--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>ant_art</groupId>
     <artifactId>ant_art</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -19,6 +25,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
