--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>ant_art</groupId>
     <artifactId>ant_art</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
